web-deploy+cm.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: default
  labels:
    app: node_dd
    type: application
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: node_dd
    type: application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: node_dd
    type: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node_dd
      type: application
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 14
  template:
    metadata:
      name: nginx
      labels:
        app: node_dd
        type: application
    spec:
      containers:
        - name: web
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /home/nginx
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
