ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entrypoint
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-svc
                port:
                  number: 80
